--- a/config.json
+++ b/config.json
@@ -1,10 +1,6 @@
 {
-  "app": {
-    "host": "0.0.0.0",
-    "port": 8080
-  },
-  "consul": {
-  },
+  "listen_host": "0.0.0.0",
+  "listen_port": 8080,
   "projects": {
   }
 }
